--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,24 @@
 <header class="header">
     <div class="header-content">
       <div class="left-header">
-        <img src="assets/logo.png" alt="Lifeline Pampanga Logo" class="logo" />
+        <img src="assets/L.png" alt="Lifeline Pampanga Logo" class="logo" />
         <nav class="nav-buttons">
-          <button>Home</button>
-          <button><a routerLink="/jobs">Jobs</a></button>
-          <button><a routerLink="/manage-jobs">Manage Jobs</a></button>
-          <button>About</button>
-          <button>Contact</button>
+          <button routerLink="/">Home</button>
+          <button routerLink="/jobs">Jobs</button>
+          <button routerLink="/manage-jobs">Manage Jobs</button>
+          <button routerLink="/contact">Contact</button>
         </nav>
       </div>
       <div class="social-icons">
-        <img src="assets/facebook-icon.png" alt="Facebook" />
-        <img src="assets/twitter-icon.png" alt="Twitter" />
-        <img src="assets/instagram-icon.png" alt="Instagram" />
+        <a href="https://www.facebook.com/login" target="_blank">
+          <img src="assets/facebook.png" alt="Facebook" />
+      </a>
+      <a href="https://twitter.com/login" target="_blank">
+          <img src="assets/twitter.png" alt="Twitter" />
+      </a>
+      <a href="https://www.instagram.com/accounts/login/" target="_blank">
+          <img src="assets/instagram.png" alt="Instagram" />
+      </a>
       </div>
     </div>
   </header>
