--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,24 @@
 <header class="header">
-    <div class="header-content">
-      <div class="left-header">
-        <img src="assets/logo.png" alt="Lifeline Pampanga Logo" class="logo" />
-        <nav class="nav-buttons">
-          <button>Home</button>
-          <button><a routerLink="/jobs">Jobs</a></button>
-          <button><a routerLink="/manage-jobs">Manage Jobs</a></button>
-          <button>About</button>
-          <button>Contact</button>
-        </nav>
-      </div>
-      <div class="social-icons">
-        <img src="assets/facebook-icon.png" alt="Facebook" />
-        <img src="assets/twitter-icon.png" alt="Twitter" />
-        <img src="assets/instagram-icon.png" alt="Instagram" />
-      </div>
-    </div>
-  </header>
-<router-outlet></router-outlet>
+  <div class="header-content">
+    <div class="left-header">
+      <img src="assets/logo.png" alt="Lifeline Pampanga Logo" class="logo" />
+      <nav class="nav-buttons">
+        <button>Home</button>
+        <button><a routerLink="/jobs">Jobs</a></button>
+        <button *ngIf="isAdmin"><a routerLink="/manage-jobs">Manage Jobs</a></button> 
+        <button>About</button>
+        <button>Contact</button>
+        <button *ngIf="!isAdmin"><a routerLink="/login">Admin Login</a></button>
+        <button *ngIf="isAdmin" (click)="logout()">Logout</button>
 
+      </nav>
+    </div>
+    <div class="social-icons">
+      <img src="assets/facebook-icon.png" alt="Facebook" />
+      <img src="assets/twitter-icon.png" alt="Twitter" />
+      <img src="assets/instagram-icon.png" alt="Instagram" />
+    </div>
+  </div>
+</header>
+
+<router-outlet></router-outlet>
